Set Form-item--fileInputWrapper--status to ellipsis trim to avoid long filename wrapping

--- a/styls/components/form.styl
+++ b/styls/components/form.styl
@@ -211,7 +211,11 @@
 
 .Form-item--fileInputWrapper--status {
   padding-top: 1px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   width: auto !important;
+  max-width: 230px;
 }
 
 .Form-item--fileInputWrapper--clear {
